# integral-tp

./: LICENSE  README.md  integral.v  integral_workshop.ipynb  pyproject.toml  requirements-colab.txt  source.v
scripts/: benchmark_strategy_a.py  benchmark_strategy_b.py  build_retrieval_cache.py  stress_llm_proxy.py  test_full_tp_llm.py  test_workshop_api.py
workshop_api/: __init__.py  helpers.py  llm.py  llm_server.py  retrieval.py  rocq.py  widgets.py
