[project]
name = "integral-tp"
version = "0.1.0"
description = "Colab workshop helpers for certified numerical analysis with Rocq."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "mistralai>=2.4.9",
  "openai>=1.0",
  "requests",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
colab = [
  "faiss-cpu",
  "ipywidgets>=8.0.0",
  "numpy",
  "pygments",
  "sentence-transformers>=2.7.0",
  "transformers>=4.51.0",
  "pytanque @ git+https://github.com/llm4rocq/pytanque.git",
  "rocq-ml-toolbox[client] @ git+https://github.com/llm4rocq/rocq-ml-toolbox.git",
]
retrieval = [
  "datasets",
  "faiss-cpu",
  "numpy",
  "sentence-transformers>=2.7.0",
  "transformers>=4.51.0",
]
toolbox-client = [
  "rocq-ml-toolbox[client] @ git+https://github.com/llm4rocq/rocq-ml-toolbox.git",
]

[project.scripts]
integral-tp-llm-server = "workshop_api.llm_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["workshop_api*"]
